--- a/00_Coffee_shop/products.html
+++ b/00_Coffee_shop/products.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header/Navigation -->
+<!--     Header -->
     <header>
         <nav class="navbar">
             <div class="logo">Coffee Haven</div>
